# media-tracker

./: .env.example  .gitignore  .releaserc.json  .yamllint  CHANGELOG.md  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  package-lock.json  package.json
backend/: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: cli.py  config.py  database.py  main.py  models.py
backend/app/api/: auth.py  error_handler.py  jellyfin.py  media.py  radarr.py  schedule.py  settings.py  sonarr.py  sync.py  users.py  watch_history.py
backend/app/client/: base_client.py  endpoints.py  error_handler.py  jellyfin_client.py  pagination.py  radarr_client.py  radarr_client.py.backup  sonarr_client.py  sonarr_client.py.backup  tmdb_bridge_client.py
backend/app/core/: logging.py
backend/app/dependencies/: auth.py  scheduler.py
backend/app/exceptions/: client_errors.py  handlers.py
backend/app/models/: auth.py  media.py  schedule.py  user.py
backend/app/schemas/: auth.py  error_codes.py  jellyfin.py  media.py  radarr.py  responses.py  service_config.py  service_errors.py  sonarr.py  sync_schedule.py  tmdb_bridge.py  users.py  watch_history.py
backend/app/services/: auth_service.py  import_jellyfin_movies_service.py  import_jellyfin_series_service.py  jellyfin_movies_service.py  jellyfin_users_service.py  jobs.py  media_service.py  movie_utils.py  radarr_service.py  schedule_constants.py  schedule_repository.py  series_utils.py  service_config_repository.py  service_test.py  sonarr_service.py  sync_jellyfin_movies_service.py  sync_jellyfin_watched_movies_service.py  sync_jellyfin_watched_series_service.py  update_tmdb_metadata_service.py  update_tmdb_series_metadata_service.py  users_service.py  watch_history_service.py
backend/app/utils/: config_validator.py  cookies.py  cron_utils.py  datetime.py  datetime_utils.py  encryption.py  poster_utils.py  security.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 01760f85b906_add_sync_schedules.py  16b1ac384f3d_add_partial_unique_index_for_movie_.py  318c76f4e023_add_service_configs_table.py  3699efcdb808_update_models_for_timezone_and_new_.py  379e67d12bb9_added_tmdb_id_and_imdb_id.py  3b6ead0c844e_rename_type_to_media_type.py  4257ec3d4ecd_make_episode_sonarr_id_nullable.py  5552c6430756_change_jellyfin_id_to_string.py  5e69e8ebe3ea_update_models_for_jellyfin_id_str64.py  69e983b34c87_change_jellyfin_user_id_to_varchar_36.py  844e6abd66a2_update_models_for_series_added_field_.py  9afc76d62278_add_unique_constraint_to_watch_history.py  9f8e7d6c5b4a_mtb129_tmdb_series_metadata.py  a17003661b15_initial_migration.py  a1b2c3d4e5f6_fix_moviestatus_enum_case.py  a785246ff4d1_add_auth_tables.py  aedcba8d6c2c_add_tmdb_metadata_fields_to_movies_and_.py  b54692997717_add_watch_status_and_movie_fields.py  b6b882c23f9d_update_models_for_movies_add_status_and_.py  bb500f0431b8_update_serias_added_tmdb_id_field.py  c3d4e5f6a7b8_add_movie_status_enum.py  cc15243728fb_update_models_for_watch_history_updated_.py  d1e2f3a4b5c6_expand_encrypted_api_key_to_1024.py  e0e03248ff4a_add_imdb_id_to_series.py  f1a2b3c4d5e6_fix_tmdb_movies_metadata_update_enum_case.py  f6b2a4f56a9f_update_series_and_seasons_and_episodes_.py
backend/tests/: factories.py
backend/tests/integration/: conftest.py  test_auth.py  test_create_item.py  test_create_movie.py  test_media_api.py  test_save_jellyfin_movies.py  test_save_jellyfin_series.py  test_save_radarr_movie.py  test_save_sonarr_series.py  test_schedule_integration.py  test_settings_integration.py  test_sync_jellyfin_watched_movies.py  test_sync_jellyfin_watched_series.py  test_watch_history.py
backend/tests/integration/jobs/: test_tmdb_metadata_update_job.py
backend/tests/units/: conftest.py  test_api_radarr.py  test_api_sonarr.py  test_handler_sonarr_client.py  test_radarr_api.py  test_radarr_client.py  test_radarr_import.py  test_radarr_service.py  test_sonarr_client.py  test_sonarr_service.py
backend/tests/units/fixtures/: radarr_movies.py
backend/tests/units/services/: test_media_service.py  test_movie_status_mapping.py  test_schedule_repository.py  test_series_status_mapping.py  test_service_config_repository.py  test_update_tmdb_metadata_service.py  (+1 more)
backend/tests/utils/: db_asserts.py
(+121 files in other folders)
