[tool.poetry]
name = "media-tracker"
version = "0.1.0"
description = "Collects and stores stats from Sonarr, Radarr, and Jellyfin. Keeps history of watched and added media even if deleted from your library. Data can be expanded and visualized in UI or Grafana."
authors = ["Anastasia Salikova <randomnanastya@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.23.0" }  # версия uvicorn под fastapi 0.116
sqlalchemy = "^2.0"
alembic = "^1.16"
psycopg2-binary = "^2.9.10"
httpx = "^0.25.0"  # Понижаем до 0.25 для совместимости
asyncpg = "^0.28"
apscheduler = "^3.10"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"  # Совместимо с pytest-httpx
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-httpx = "^0.27.0"
# УБИРАЕМ httpx отсюда - используем из основных зависимостей
# testcontainers = "^3.8.0"  # Пока убираем, может вызвать проблемы
# testcontainers-postgres = "^3.8.0"  # Пока убираем

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
